--- a/kontakt-abednarz.html
+++ b/kontakt-abednarz.html
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build your own website for free</a></section><section class="mbr-section contacts2 cid-s5eiXVZGf1" id="contacts2-j">
+<section class="engine"><a href="https://mobirise.info/o">free portfolio site templates</a></section><section class="mbr-section contacts2 cid-s5eiXVZGf1" id="contacts2-j">
     <!---->
     
     <!---->
