--- a/omnie-abednarz.html
+++ b/omnie-abednarz.html
@@ -68,8 +68,8 @@
                 </li><li class="nav-item">
                     <a class="nav-link link text-black display-4" href="galeria-abednarz.html">
                         Galeria</a>
-                </li><li class="nav-item dropdown open"><a class="nav-link link text-black dropdown-toggle display-4" href="kontakt-abednarz.html" data-toggle="dropdown-submenu" aria-expanded="true">
-                        Oferta &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a><div class="dropdown-menu"><a class="text-black dropdown-item display-4" href="kontakt-abednarz.html">Komunie</a></div></li><li class="nav-item"><a class="nav-link link text-black display-4" href="kontakt-abednarz.html">
+                </li><li class="nav-item dropdown"><a class="nav-link link text-black dropdown-toggle display-4" href="kontakt-abednarz.html" data-toggle="dropdown-submenu" aria-expanded="false">
+                        Oferta &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a><div class="dropdown-menu"><a class="text-black dropdown-item display-4" href="fotograf-komunia-abednarz.html">Komunie</a></div></li><li class="nav-item"><a class="nav-link link text-black display-4" href="kontakt-abednarz.html">
                         Kontakt &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a></li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://wa.me/48 576996046">
                     <span class="btn-icon mbri-mobile mbr-iconfont mbr-iconfont-btn">
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">free bootstrap themes</a></section><section class="counters4 counters cid-s5e9sLgyiM" id="counters4-b">
+<section class="engine"><a href="https://mobirise.info/p">web templates free download</a></section><section class="counters4 counters cid-s5e9sLgyiM" id="counters4-b">
 
     
 
