--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 </li><li class="nav-item">
                     <a class="nav-link link text-black display-4" href="galeria-abednarz.html">
                         Galeria</a>
-                </li><li class="nav-item dropdown open"><a class="nav-link link text-black dropdown-toggle display-4" href="fotograf-slub-abednarz.html" data-toggle="dropdown-submenu" aria-expanded="true">
+                </li><li class="nav-item dropdown"><a class="nav-link link text-black dropdown-toggle display-4" href="fotograf-slub-abednarz.html" data-toggle="dropdown-submenu" aria-expanded="false">
                         Oferta &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a><div class="dropdown-menu"><a class="text-black dropdown-item display-4" href="fotograf-komunia-abednarz.html">Komunie</a><a class="text-black dropdown-item display-4" href="fotograf-slub-abednarz.html" aria-expanded="false">Śluby</a></div></li><li class="nav-item"><a class="nav-link link text-black display-4" href="kontakt-abednarz.html">
                         Kontakt &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a></li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://wa.me/48 576996046">
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">simple web templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/a">online site builder</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
