--- a/galeria-abednarz.html
+++ b/galeria-abednarz.html
@@ -70,7 +70,7 @@
                     <a class="nav-link link text-black display-4" href="galeria-abednarz.html">
                         Galeria</a>
                 </li><li class="nav-item dropdown"><a class="nav-link link text-black dropdown-toggle display-4" href="fotograf-slub-abednarz.html" data-toggle="dropdown-submenu" aria-expanded="false">
-                        Oferta &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a><div class="dropdown-menu"><a class="text-black dropdown-item display-4" href="fotograf-komunia-abednarz.html">Komunie</a><a class="text-black dropdown-item display-4" href="fotograf-slub-abednarz.html" aria-expanded="false">Śluby</a><a class="text-black dropdown-item display-4" href="fotograf-studniowka-abednarz.html" aria-expanded="true">Studniówki i półmetki</a></div></li><li class="nav-item"><a class="nav-link link text-black display-4" href="kontakt-abednarz.html">
+                        Oferta &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a><div class="dropdown-menu"><a class="text-black dropdown-item display-4" href="fotograf-komunia-abednarz.html">Komunie</a><a class="text-black dropdown-item display-4" href="fotograf-slub-abednarz.html" aria-expanded="false">Śluby</a><a class="text-black dropdown-item display-4" href="fotograf-studniowka-abednarz.html" aria-expanded="true">Studniówki i półmetki</a><a class="text-black dropdown-item display-4" href="fotograf-bierzmowanie-abednarz.html" aria-expanded="true">Bierzmowanie</a></div></li><li class="nav-item"><a class="nav-link link text-black display-4" href="kontakt-abednarz.html">
                         Kontakt &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a></li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://wa.me/48 576996046">
                     <span class="btn-icon mbri-mobile mbr-iconfont mbr-iconfont-btn">
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">free website creation software</a></section><section class="mbr-section article content9 cid-s5eqSSRiGh" id="content9-u">
+<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="mbr-section article content9 cid-s5eqSSRiGh" id="content9-u">
     
      
 
