--- a/fotograf-bierzmowanie-abednarz.html
+++ b/fotograf-bierzmowanie-abednarz.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">free website design templates</a></section><section class="mbr-section article content1 cid-s5vLHuCnkM" id="content2-1m">
+<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section class="mbr-section article content1 cid-s5vLHuCnkM" id="content2-1m">
 
      
 
