--- a/fotograf-osiemnastki-abednarz.html
+++ b/fotograf-osiemnastki-abednarz.html
@@ -71,7 +71,7 @@
                     <a class="nav-link link text-black display-4" href="galeria-abednarz.html">
                         Galeria</a>
                 </li><li class="nav-item dropdown"><a class="nav-link link text-black dropdown-toggle display-4" href="fotograf-slub-abednarz.html" data-toggle="dropdown-submenu" aria-expanded="false">
-                        Oferta &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a><div class="dropdown-menu"><a class="text-black dropdown-item display-4" href="fotograf-komunia-abednarz.html">Komunie</a><a class="text-black dropdown-item display-4" href="fotograf-slub-abednarz.html" aria-expanded="false">Śluby</a><a class="text-black dropdown-item display-4" href="fotograf-studniowka-abednarz.html" aria-expanded="false">Studniówki i półmetki</a><a class="text-black dropdown-item display-4" href="fotograf-bierzmowanie-abednarz.html" aria-expanded="false">Bierzmowanie</a><a class="text-black dropdown-item display-4" href="page8.html" aria-expanded="true">18 Osiemnastki</a></div></li><li class="nav-item"><a class="nav-link link text-black display-4" href="kontakt-abednarz.html">
+                        Oferta &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a><div class="dropdown-menu"><a class="text-black dropdown-item display-4" href="fotograf-komunia-abednarz.html">Komunie</a><a class="text-black dropdown-item display-4" href="fotograf-slub-abednarz.html" aria-expanded="false">Śluby</a><a class="text-black dropdown-item display-4" href="fotograf-studniowka-abednarz.html" aria-expanded="false">Studniówki i półmetki</a><a class="text-black dropdown-item display-4" href="fotograf-bierzmowanie-abednarz.html" aria-expanded="false">Bierzmowanie</a><a class="text-black dropdown-item display-4" href="fotograf-osiemnastki-abednarz.html" aria-expanded="true">18 Osiemnastki</a></div></li><li class="nav-item"><a class="nav-link link text-black display-4" href="kontakt-abednarz.html">
                         Kontakt &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a></li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://wa.me/48 576996046">
                     <span class="btn-icon mbri-mobile mbr-iconfont mbr-iconfont-btn">
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">how to make a site for free</a></section><section class="mbr-section article content1 cid-s5R0eM2prl" id="content2-1u">
+<section class="engine"><a href="https://mobirise.info/a">online web builder</a></section><section class="mbr-section article content1 cid-s5R0eM2prl" id="content2-1u">
 
      
 
