--- a/fotograf-komunia-abednarz.html
+++ b/fotograf-komunia-abednarz.html
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">bootstrap templates</a></section><section class="mbr-section article content1 cid-s5vlGXv8lm" id="content2-16">
+<section class="engine"><a href="https://mobirise.info/r">free bootstrap templates</a></section><section class="mbr-section article content1 cid-s5vlGXv8lm" id="content2-16">
 
      
 
