--- a/fotograf-slub-abednarz.html
+++ b/fotograf-slub-abednarz.html
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">how to create your own site</a></section><section class="mbr-section article content1 cid-s5vrmHAVis" id="content2-1b">
+<section class="engine"><a href="https://mobirise.info/s">bootstrap themes</a></section><section class="mbr-section article content1 cid-s5vrmHAVis" id="content2-1b">
 
      
 
